@@ -2,6 +2,7 @@
 <!-- This file is part of Coog. The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <tree>
+    <field name="sequence"/>
     <field name="name"/>
     <field name="code"/>
     <field name="products_name"/>
