@@ -1,6 +1,0 @@
-<?xml version="1.0"?>
-<!-- This file is part of Coog. The COPYRIGHT file at the top level of
-this repository contains the full copyright notices and license terms. -->
-<tree sequence="order">
-    <field name="coverage"/>
-</tree>
