@@ -30,11 +30,7 @@ this repository contains the full copyright notices and license terms. -->
             <field name="description" colspan="4"/>
         </page>
         <page string="Option Descriptions" id="option">
-            <label name="change_coverages_order"/>
-            <field name="change_coverages_order"/>
-            <newline/>
             <field name="coverages" colspan="4"/>
-            <field name="ordered_coverages" colspan="4" mode="tree"/>
             <field name="packages" colspan="2"/>
         </page>
         <page string="Rules" id="managers">
