@@ -1,3 +1,4 @@
+* BUG#8131 Gestion globale de l'ordre des garanties
 * #BUG7728 Le style par défaut est optionnel
 
 Version 1.14 - 2017-11-09
