@@ -1,3 +1,4 @@
+* BUG#8131 Globally manage coverage ordering
 * #BUG7728 Make the default style optional
 
 Version 1.14 - 2017-11-09
